--- a/package.json
+++ b/package.json
@@ -9,55 +9,45 @@
   "author": "vlad@cyberless.ru",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
-    "bem-pug-mixins": "^1.0.0",
-    "browser-sync": "^2.26.5",
-    "del": "^4.1.1",
-    "event-stream": "^4.0.1",
+    "browser-sync": "^2.26.7",
+    "del": "^5.1.0",
     "fs": "0.0.1-security",
-    "glob": "^7.1.4",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^6.1.0",
-    "gulp-cache": "^1.1.1",
-    "gulp-cheerio": "^0.6.3",
-    "gulp-concat": "^2.6.1",
+    "glob": "^7.1.6",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-cheerio": "^1.0.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-html-prettify": "0.0.1",
     "gulp-inject-string": "^1.1.2",
+    "gulp-load-plugins": "^2.0.2",
+    "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
-    "gulp-open": "^3.0.1",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^4.0.1",
-    "gulp-pugbem": "^2.2.4",
-    "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sass-glob": "^1.0.9",
+    "gulp-sass-glob": "^1.1.0",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-svgmin": "^2.2.0",
-    "gulp-zip": "^5.0.0",
-    "imagemin": "^6.1.0",
+    "gulp-open": "^3.0.1",
+    "imagemin": "^7.0.1",
+    "imagemin-jpeg-recompress": "^6.0.0",
     "imagemin-jpegtran": "^6.0.0",
     "imagemin-pngquant": "^8.0.0",
     "imagemin-webp": "^5.1.0",
-    "jquery": "^3.4.1",
-    "map-stream": "0.0.7",
-    "path": "^0.12.7",
+    "merge-stream": "^2.0.0",
     "vinyl-ftp": "^0.6.1",
-    "webpack": "^4.41.2",
+    "webpack": "^4.41.5",
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
-    "@babel/core": "^7.6.4",
-    "babel-upgrade": "^1.0.1",
-    "fontforge": "0.0.4",
-    "gulp-insert": "^0.5.0",
-    "inputmask": "^4.0.9",
+    "inputmask": "^5.0.3",
     "jquery-validation": "^1.19.1",
     "magnific-popup": "^1.1.0",
-    "sass-mediaqueries": "^1.6.1"
+    "sass-mediaqueries": "^1.6.1",
   }
 }
