--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
     "inputmask": "^5.0.3",
     "jquery-validation": "^1.19.1",
     "magnific-popup": "^1.1.0",
-    "sass-mediaqueries": "^1.6.1",
+    "sass-mediaqueries": "^1.6.1"
   }
 }
