--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-changed": "^4.0.2",
     "gulp-cheerio": "^1.0.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-html-prettify": "0.0.1",
@@ -26,6 +27,7 @@
     "gulp-load-plugins": "^2.0.2",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
+    "gulp-open": "^3.0.1",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^4.0.1",
     "gulp-replace": "^1.0.0",
@@ -33,7 +35,6 @@
     "gulp-sass-glob": "^1.1.0",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-svgmin": "^2.2.0",
-    "gulp-open": "^3.0.1",
     "imagemin": "^7.0.1",
     "imagemin-jpeg-recompress": "^6.0.0",
     "imagemin-jpegtran": "^6.0.0",
