--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
+    "emitty": "^1.4.0",
+    "gulp-if": "^3.0.0",
     "inputmask": "^5.0.3",
     "jquery-validation": "^1.19.1",
     "magnific-popup": "^1.1.0",
